--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,10 @@ public_html/hot
 
 storage/*.key
 .env
+.env.backup
 Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+
+docker-compose.override.yml
